--- a/_includes/custom/custom_head.html
+++ b/_includes/custom/custom_head.html
@@ -1,5 +1,23 @@
 <!-- start custom head snippets -->
 
+<style>
+  #main td, th { border: none!important; }
+  #main a:link { text-decoration: underline; }
+  #main a:visited { text-decoration: underline; }
+  #main a:focus { text-decoration: underline; color: #888888; }
+  #main a:hover { text-decoration: underline; color: #888888; }
+  #main a:active { text-decoration: underline; color: #888888; }
+  #main ul li{ 
+    display: inline;
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+    padding-inline-end: 10px;
+  }
+</style>
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
+<script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 
 <!-- end custom head snippets -->
